feat: issue #59
